# tsearch

./: .gitignore  tsearch.cabal
data/: back.txt  samuel1.txt  samuel2.txt
data/fiction/crime/: Bat.Wing.by.Sax.Rohmer.txt
data/fiction/mistery/: Greenmantle.by.John.Buchan.txt
data/fiction/science/: Beyond.Pandora.by.Robert.J.Martin.txt  Operation.Outer.Space.by.Murray.Leinster.txt  Storm.Over.Warlock.by.Andre.Norton.txt  The.Dark.Door.by.Alan.Edward.Nourse.txt  The.Rat.Racket.by.David.Henry.Keller.txt
data/history/uk/: Queen.Victoria.by.Lytton.Strachey.txt  The.Reign.of.Mary.Tudor.by.James.Anthony.Froude.txt
data/history/us/: A.Brief.History.of.the.United.States.by.John.Bach.McMaster.txt  Home.Life.in.Colonial.Days.by.Alice.Morse.Earle.txt  The.Jesuits.in.North.America.in.the.Seventeenth.Century.by.Francis.Parkman.txt
parallel/haskell/: Buffer.hs  Engine.hs  Index.hs  Lexer.hs  Logger.hs  Main.hs  Query.hs  Scanner.hs  Types.hs  tsearch.cabal
sequential/: Index.hs  Lexer.hs  Main.hs  Query.hs  Scanner.hs  Types.hs  tsearch-seq.cabal
sequential/src/: Index.hs  Lexer.hs  Main.hs
src/: Engine.hs  Index.hs  Logger.hs  Main.hs
