name:                tsearch-seq
version:             0.0.1
homepage:            http://github.com/luisgabriel/tsearch
license:             MIT
author:              Luís Gabriel Lima
maintainer:          lampih@gmail.com
category:            Search engine
build-type:          Simple
cabal-version:       >=1.8

executable tsearch-seq
  build-depends: base ==4.6.*, directory ==1.2.*, filepath ==1.3.*,
                 containers ==0.5.*, array ==0.4.*
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -O -Wall -rtsopts
